--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     </header>
     <div id="slideshow">
       <div class="container">
-
+        
+        <!-- Slideshow goes here -->
 
       </div>
     </div>
