--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width">
     <title>raastra Hotel</title>
     <link rel="stylesheet" href="styles.css" type="text/css">
+    <script src="slideshow.js"></script>
     <link rel="icon" href="images/raastra.png">
   </head>
   <body>
@@ -27,11 +28,34 @@
         </nav>
       </div>
     </header>
-    <div id="slideshow">
-      <div class="container">
-        
-        <!-- Slideshow goes here -->
+    <div class="everything">
+      <div class="slideshow cont">
+        <div class="mySlides fade">
+          <div class="numbertext">1 / 3</div>
+          <img src="images/img1.jpg" style="width:100%">
+          <div class="text">Text</div>
+        </div>
 
+        <div class="mySlides fade">
+          <div class="numbertext">2 / 3</div>
+          <img src="images/img2.jpg" style="width:100%">
+          <div class="text">Text</div>
+        </div>
+
+        <div class="mySlides fade">
+          <div class="numbertext">3 / 3</div>
+          <img src="images/img3.jpg" style="width:100%">
+          <div class="text">Text</div>
+        </div>
+
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <br>
+      <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
       </div>
     </div>
     <div class="container">
