--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
         <div class="mySlides fade">
           <div class="numbertext">1 / 3</div>
           <img src="images/img1.jpg" style="width:100%">
-          <div class="text">Text</div>
+          <div class="text">Clean and Green</div>
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext">2 / 3</div>
           <img src="images/img2.jpg" style="width:100%">
-          <div class="text">Text</div>
+          <div class="text">Exquisite interiors</div>
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext">3 / 3</div>
           <img src="images/img3.jpg" style="width:100%">
-          <div class="text">Text</div>
+          <div class="text">Comfortable Rooms</div>
         </div>
 
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
