--- a/booking.html
+++ b/booking.html
@@ -46,7 +46,7 @@
                   <option value="x">Other</option>
                 </select><br>
                 <label>Additional Requirement:</label><br>
-                <input type="textarea"><br>
+                <textarea></textarea><br>
                 <button>Submit</button>
               </form>
             </div>
